Set animate-fade-in to an initial opacity of zero to avoid first load flicker

--- a/assets/app.css
+++ b/assets/app.css
@@ -16,6 +16,7 @@
     }
 
     .animate-fade-in {
+        opacity: 0;
         animation: fade 200ms linear 1;
         animation-fill-mode: both;
     }
